--- a/package.json
+++ b/package.json
@@ -2,8 +2,31 @@
   "name": "demo-repo",
   "version": "0.2.0",
   "description": "A sample package.json",
-  "dependencies": {
-    "@primer/css": "17.0.1"
+  "main": "index.js",
+  "scripts": {
+    "test": "test",
+    "start": "cross-env NODE_ENV=production node server/server.js",
+    "build": "cross-env NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack serve --open & NODE_ENV=development & nodemon server/server.js"
   },
-  "license": "MIT"
+  "dependencies": {
+    "@primer/css": "17.0.1",
+    "express": "^4.19.2",
+    "path": "^0.12.7"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.0",
+    "html-webpack-plugin": "^5.6.0",
+    "nodemon": "^3.1.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  }
 }
