--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "demo-repo",
-  "version": "0.2.0",
-  "description": "A sample package.json",
+  "name": "toilet-buddy",
+  "version": "1.0.0",
+  "description": "Add your two cents on bathrooms nationwide",
   "main": "index.js",
   "scripts": {
     "test": "test",
