--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@primer/css": "17.0.1",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.3",
     "express": "^4.19.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "license": "MIT",
   "devDependencies": {
