--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@primer/css": "17.0.1",
+    "@reach/combobox": "^0.18.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^134.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "use-places-autocomplete": "^4.0.1"
   },
   "license": "MIT",
   "devDependencies": {
