--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@primer/css": "17.0.1",
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
     "express": "^4.19.2",
     "googleapis": "^134.0.0",
+    "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
