--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@primer/css": "17.0.1",
     "@react-google-maps/api": "^2.19.3",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
     "express": "^4.19.2",
     "googleapis": "^134.0.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
