--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
+    "@eslint/js": "^9.0.0",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.0",
+    "eslint": "^9.0.0",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.1.0",
     "style-loader": "^4.0.0",
